# wintweak

./: .gitattributes  .gitignore  111.html  DESIGN.md  README.md  biome.json  handoff.md  index.html  package.json  pnpm-lock.yaml  streaming-registry-apply.md  vite.config.ts
.github/workflows/: backend.yml  frontend.yml
docs/: architecture.md  research-sources.md  roadmap.md  ui-redesign-audit.md
docs/decisions/: 0001-backend-foundation.md  0002-crash-aware-recovery-replay.md  0003-fluent-editorial-frontend.md  0004-local-explainable-advisor.md  0005-app-store-process-boundary.md  known-issues.md
research/: FUNCTIONALITY_AUDIT.md  IMPLEMENTATION_PLAN.md  PORTING_MATRIX.md  SOURCE_LEDGER.md
scripts/: check-repository-hygiene.mjs  check-rust-toolchain.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  app.dev.manifest  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/data/: example.batch.json
src-tauri/data/apps/: catalog.json
src-tauri/data/tweaks/: catalog.json
src-tauri/src/: errors.rs  lib.rs  logging.rs  main.rs  types.rs
src-tauri/src/api_bridge/: mod.rs
src-tauri/src/cli/: args.rs  headless.rs  mod.rs
src-tauri/src/core/: advisor.rs  apps.rs  appx.rs  drivers.rs  environment.rs  mod.rs  profiles.rs  provider.rs  system_info.rs
src-tauri/src/core/registry/: mod.rs  snapshot.rs  tests.rs
src-tauri/src/core/registry_data/: mod.rs
src-tauri/src/core/runner/: allowlist.rs  mod.rs
src-tauri/src/core/validator/: mod.rs
src-tauri/src/winapi_safe/: mod.rs
src-tauri/tests/: boundary_enforcement.rs  config_validation.rs
(+28 files in other folders)
