[package]
name = "native-windows-optimizer"
version = "0.1.0"
description = "A compiled-first Windows optimization utility"
authors = ["Native Windows Optimizer contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[lib]
name = "native_windows_optimizer"
crate-type = ["rlib"]

[features]
default = []
elevated = []

[[bin]]
name = "optimizer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11.5", features = [] }
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Registry",
] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
